--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,8 @@ h3 {
 
 img{
     display:block;
+    max-width: 100%;
+    height: auto;
 }
 
 button{
@@ -94,13 +96,7 @@ ul, ol{
     display: flex;
     align-items: center;
 }
-.header-menu {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-    margin-right: auto;
-    align-items: center;
-}
+
 
 /* region Logo */
 .logo {
@@ -120,10 +116,15 @@ ul, ol{
     color: var(--iris);
 }
 
-.header-menu-list {
+.header-menu {
     display: flex;
-    gap: 40px;
+    justify-content: space-between;
+    flex-grow: 1;
     margin-right: auto;
+    align-items: center;
+}
+.header-menu-list {
+display: none;
  
 }
 .header-menu-link {
@@ -157,9 +158,7 @@ ul, ol{
 }
 
 .address {
-    color: var(--slate);
-    font-style: normal;
-    padding: 0;
+display: none;
 }
 
 .address-info
@@ -179,6 +178,8 @@ ul, ol{
 .address-link:focus {
     color: var(--ocean);
 }
+
+
 
 /* Buttons */
 .btn {
@@ -226,19 +227,27 @@ ul, ol{
     padding: 16px 32px;
 
     transition: var(--trns-fast);
-        transition-property: color, background-color, border-color;
+    transition-property: color, background-color, border-color;
 }
 
 /* region Hero*/
 .hero {
     background: var(--navy-blue);
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
+    rgba(46, 47, 66, 0.7)), url(../images/hero-bg_mob@1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    background-size: cover;
+    padding-top: 112px;
+    padding-bottom: 112px;
 
+}
+
+@media (min-resolution: 192dpi) {
+   .hero{
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)), url(../images/hero-bg_mob@2x.jpg);
+  }
 }
 .hero .container {
 
@@ -246,65 +255,164 @@ ul, ol{
 
 }
 .hero-text{
-    max-width: 496px;
-    margin-bottom: 48px;
+    max-width: 320px;
+    margin-bottom: 72px;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+
+
+.hide{
+    display: none;
+}
+
+
+/* MOBILE STYLES*/
+.container {
+    max-width: 428px;
+    padding-left: 16px;
+    padding-right: 16px;
     margin-left: auto;
     margin-right: auto;
 }
-.container{
-    width: 1158px;
-    padding: 0 15px;
-    margin: 0 auto;
-}
+
+
 
 /* features section*/
 
 .features-section{
-    padding-top: 120px;
-    max-width: 1440px;
+    padding-top: 96px;
+    max-width: 428px;
     margin: 0 auto;
+    padding-bottom: 96px;
 }
-.features-section .container{
+.features-icon {
+    display: none;
 }
-.features-icon-wrapper{
+.features-section-items{
+    display: flex;
+    flex-direction: column;
+    gap: 72px; 
+}
+.features-section-h{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
+    text-transform: capitalize;
+    text-align: center;
+}
+.features-section-p{
+    max-width: 100%;
+    margin-top: 8px;
+    font-weight: 500;
+}
+/* What are we doing*/
+.hide-section-two{
+display: none;
+}
+
+/* region Team*/
+.team {
     background: var(--cloud);
-    border-radius: 4px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.team .container {}
+.team-title {
+    margin-bottom: 72px;
+}
+.team-items {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    align-items: center;
+}
+.team-item {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background: var(--white);
+    border-radius: 0 0 4px 4px;
     width: 264px;
-    height: 112px;
+}
+.team-member-info {
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+.team-member-name {
+    text-align: center;
     margin-bottom: 8px;
+}
+.team-member-text {
+    text-align: center;
+}
+.team-member-socials {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 8px;
+}
+.team-socials-item {}
+
+.socials-link {
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.features-icon{
+    background-color: var(--iris);
 
+    transition: var(--trns-fast);
+    transition-property: color, border-color;
 }
 
-.features-section-items{
-    display: flex;
-    gap: 24px;
-    
+.socials-link:hover,
+.socials-link:focus {
+    background-color: var(--ocean)
 }
-.features-section-p{
-    max-width: 264px;
-    margin-top: 8px;
+
+.sm-footer:hover,
+.sm-footer:focus {
+    background-color: var(--green);
 }
+
+.socials-icon {
+    fill: currentColor;
+}
+
+.socials-icon {}
+
 
 
 /* Customers*/
 .section-customers {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 .section-customers-items {
     display: flex;
-    gap: 24px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 16px;
+    row-gap: 72px;
     margin-top: 72px;
+    justify-content: center;
+    align-items: center;
 }
 .section-customers-item {}
 .customers-link {
     border-radius: 4px;
-    width: 168px;
+    width: 190px;
     height: 88px;
     display: flex;
     justify-content: center;
@@ -325,20 +433,6 @@ ul, ol{
 }
 
 
-
-/* section What are we doing*/
-.section-two{
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-.section-two .container{
-
-}
-.section-two-items{
-    display: flex;
-    gap: 24px;
-    margin-top: 72px;
-}
 
 /* region Rows*/
 .rows .container{
@@ -403,152 +497,151 @@ padding-bottom: 120px;
     transition-property: transform;
 }
 
-/* region Team*/
-.team {
-    background: var(--cloud);
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-.team .container
-{
-}
-.team-title{
-    margin-bottom: 72px;
-}
-.team-items{
-    display: flex;
-    gap: 24px;
-}
-.team-item{
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    background: var(--white);
-    border-radius: 0 0 4px 4px;
-}
-.team-member-info{
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
-.team-member-name {
-    text-align: center;
-    margin-bottom: 8px;
-}
-.team-member-text {
-    text-align: center;
-}
-.team-member-socials{
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    margin-top: 8px;
-}
-.team-socials-item{}
-.socials-link{
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--iris);
 
-    transition: var(--trns-fast);
-    transition-property: color, border-color;
-}
-.socials-link:hover,
-.socials-link:focus {
-    background-color: var(--ocean)
-}
-.sm-footer:hover,
-.sm-footer:focus {
-    background-color: var(--green);
-}
-.socials-icon {
-    fill: currentColor;
-}
-.socials-icon{}
 
 
 
 /* region Footer */
-.footer {
-    background: var(--navy-blue);
-    padding-top: 100px;
-    padding-bottom: 100px;
+.page-footer {
+    background: #2e2f42;
+    padding: 96px 0;
 }
-.footer-paragraph {
-    color: var(--cloud);
-    max-width: 264px;
-}
-.footer-top{
+.page-footer-flex {
     display: flex;
-    align-items:center;
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;
 }
-.footer-sm{
-    color: var(--cloud);
-    margin-left: 194px;   
-}
-.footer-subscribe{
-    color: var(--cloud);
-    margin-left: 192px;
-}
-.footer-bottom{
+.page-footer-container-top {
     display: flex;
-    margin-top: 16px;
+    flex-direction: column;
+    gap: 72px;
 }
-.footer-socials{
+.page-logo-footer-container {
     display: flex;
-    justify-content: center;
-    gap: 24px;
-    margin-left: 120px;
+    flex-direction: column;
+    align-items: center;
 }
-.email-form{
-    width: 100%;
+.page-logo-footer {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
+}
+.page-logo-footer-part {
+    color: #f4f4fd;
+}
+.page-logo-footer-description {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+}
+.network-footer-container {
     display: flex;
-    align-items:baseline;
-    justify-content:flex-end;
+    flex-direction: column;
+    align-items: center;
 }
-.footer-form-input{
-    width: 264px;
-    height: 40px;
-    padding: 8px 16px;
-    font-family: var(--font-family);
-    font-size: 12px;
-    line-height: 200%;
-    letter-spacing: 0.04em;
-    color: var(--white);
-    background-color: transparent;
-
-    border: 1px solid var(--white);
-    border-radius: 4px;
-    outline: transparent;
-}
-.footer-form-input::placeholder {
-    color: var(--white);
-}
-.footer-btn{
-    border-radius: 4px;
-    padding: 8px 24px;
-    width: 165px;
-    height: 40px;
-    background: var(--iris);
+.network-footer-container-title {
     font-weight: 500;
     font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+.footer-socials {
+    display: flex;
+    gap: 16px;
+}
+.team-socials-item {
+    width: 40px;
+    height: 40px;
+}
+.footer-socials-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.network-footer-container-link:hover,
+.network-footer-container-link:focus {
+    background-color: #31d0aa;
+}
+.footer-socials-icon {
+    fill: #f4f4fd;
+}
+.form-footer-container-text {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
     text-align: center;
-    color: var(--white);
-    margin-left: 24px;
+
+
+}
+.form-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+
+}
+.footer-input {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    opacity: 0.3;
+    width: 264px;
+    height: 40px;
+    background-color: transparent;
+    padding-left: 16px;
+}
+.footer-input::placeholder {
+    color: #ffffff;
+    opacity: 0.6;
+}
+.footer-button {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #4d5ae5;
+    min-width: 165px;
+    height: 40px;
+    padding: 8px 24px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    border-radius: 4px;
     gap: 16px;
-
-    transition: var(--trns-slow);
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-btn:hover, .footer-btn:focus{
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background: var(--ocean);
-    color: var(--white);
+.footer-button-icon {
+    margin-left: 16px;
+}
+.footer-button:hover,
+.footer-button:hover {
+    background-color: #404bbf;
 }
 
 /* #region Modal window*/
@@ -577,7 +670,7 @@ padding-bottom: 120px;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%) scale(1);
-    width: 408px;
+    max-width: 408px;
     min-height: 584px;
     background-color: var(--dairy);
     border-radius: 4px;
@@ -792,5 +885,155 @@ input[type="checkbox"]+.review-form-agreement-desc>.review-form-checkbox > .revi
 }
 
 
+/*Mobile Menu*/
 
+.menu-toggle {
+    position: absolute;
+        top: 24px;
+        right: 24px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        background-color: var(--white);
+        border-radius: 50%;
+        border: 1px solid rgba(0, 0, 128, 0.1);
+        
+}
+.menu-toggle-burger{
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 24px;
+    margin-bottom: 24px;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+}
+@media (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.menu-toggle-icon{
+
+    stroke-width: 3px;
+    stroke: var(--navy-blue);
+}
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 80px 35px 40px 40px;
+    background-color: var(--white);
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    color: var(--white);
+}
+
+.mobile-menu {
+    margin-bottom: auto;
+}
+
+.mobile-menu li:not(:last-child) {
+    margin-bottom: 40px;
+}
+
+.mobile-menu .link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--navy-blue);
+}
+
+.mobile-menu .link.active {
+    color: var(--ocean);
+}
+
+.mobile-contacts {
+    margin-bottom: 40px;
+}
+
+.mobile-contacts li:not(:last-child) {
+    margin-bottom: 48px;
+}
+
+.mobile-contacts .link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--slate);
+}
+
+@media only screen and (min-width: 428px) {
+    .mobile-contacts .link.accent {
+        font-size: 36px;
+        line-height: 40px;
+        color: var(--iris);
+    }
+}
+
+.socials-mobile {
+    display: flex;
+}
+
+.mobile-item {
+    width: 40px;
+    height: 40px;
+}
+
+.mobile-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--iris);
+    transition: var(--trns-slow);
+}
+
+@media only screen and (max-width: 427px) {
+    .mobile-list {
+        justify-content: space-between;
+    }
+}
+
+@media only screen and (min-width: 428px) {
+    .mobile-list {
+        gap: 56px;
+    }
+}
 
